--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: RDF-Editor
 description: An emacs based rdf-data explorer and editor
-theme: just-the-docs
+remote_theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://gjaaf.github.io
 
 aux_links:
   GitHub Repository: https://github.com/gjaaf/rdf-editor-v3
