Added Ontop as sub-menu of Home

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: RDF-Editor
-description: An emacs based rdf-data explorer and editor
+title: On semantics
+description: Work on an old technology with lots of promise
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
